@@ -7,7 +7,6 @@ import pro.gravit.launcher.client.events.client.ClientProcessBuilderCreateEvent;
 import pro.gravit.launcher.client.events.client.ClientProcessBuilderLaunchedEvent;
 import pro.gravit.launcher.client.events.client.ClientProcessBuilderParamsWrittedEvent;
 import pro.gravit.launcher.client.events.client.ClientProcessBuilderPreLaunchEvent;
-import pro.gravit.launcher.events.request.AuthRequestEvent;
 import pro.gravit.launcher.hasher.HashedDir;
 import pro.gravit.launcher.profiles.ClientProfile;
 import pro.gravit.launcher.profiles.PlayerProfile;
@@ -27,13 +26,10 @@ import java.net.SocketAddress;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class ClientLauncherProcess {
     public final ClientParams params = new ClientParams();
     public final List<String> jvmArgs = new LinkedList<>();
-    public final List<String> jvmModules = new LinkedList<>();
-    public final List<Path> jvmModulesPaths = new LinkedList<>();
     public final List<String> systemClientArgs = new LinkedList<>();
     public final List<String> systemClassPath = new LinkedList<>();
     public final Map<String, String> systemEnv = new HashMap<>();
@@ -45,7 +41,6 @@ public class ClientLauncherProcess {
     public int bits;
     public boolean useLegacyJavaClassPathProperty;
     public boolean isStarted;
-    public JavaHelper.JavaVersion javaVersion;
     private transient Process process;
 
     public ClientLauncherProcess(Path executeFile, Path workDir, Path javaDir, String mainClass) {
@@ -86,15 +81,6 @@ public class ClientLauncherProcess {
         if (view != null) {
             this.params.actions = view.getEnabledActions();
         }
-        try {
-            javaVersion = JavaHelper.JavaVersion.getByPath(javaDir);
-        } catch (IOException e) {
-            LogHelper.error(e);
-            javaVersion = null;
-        }
-        if (javaVersion == null) {
-            javaVersion = JavaHelper.JavaVersion.getCurrentJavaVersion();
-        }
         this.bits = JVMHelper.JVM_BITS;
         applyClientProfile();
     }
@@ -119,24 +105,7 @@ public class ClientLauncherProcess {
         if (params.ram > 0) {
             this.jvmArgs.add("-Xmx" + params.ram + 'M');
         }
-        this.params.oauth = Request.getOAuth();
-        if (this.params.oauth == null) {
-            this.params.session = Request.getSession();
-        } else {
-            this.params.authId = Request.getAuthId();
-            this.params.oauthExpiredTime = Request.getTokenExpiredTime();
-            this.params.extendedTokens = Request.getExtendedTokens();
-        }
-
-        if (this.params.profile.getRuntimeInClientConfig() != ClientProfile.RuntimeInClientConfig.NONE) {
-            jvmModules.add("javafx.base");
-            jvmModules.add("javafx.graphics");
-            jvmModules.add("javafx.fxml");
-            jvmModules.add("javafx.controls");
-            jvmModules.add("javafx.swing");
-            jvmModules.add("javafx.media");
-            jvmModules.add("javafx.web");
-        }
+        this.params.session = Request.getSession();
         LauncherEngine.modulesManager.invokeEvent(new ClientProcessBuilderCreateEvent(this));
     }
 
@@ -147,14 +116,9 @@ public class ClientLauncherProcess {
         List<String> processArgs = new LinkedList<>();
         processArgs.add(executeFile.toString());
         processArgs.addAll(jvmArgs);
-        if (javaVersion.version >= 9) {
-            applyJava9Params(processArgs);
-        }
         //ADD CLASSPATH
-        if (params.profile.getClassLoaderConfig() == ClientProfile.ClassLoaderConfig.AGENT) {
+        if(params.profile.classLoaderConfig == ClientProfile.ClassLoaderConfig.AGENT) {
             processArgs.add("-javaagent:".concat(IOHelper.getCodeSource(ClientLauncherEntryPoint.class).toAbsolutePath().toString()));
-        } else if (params.profile.getClassLoaderConfig() == ClientProfile.ClassLoaderConfig.SYSTEM_ARGS) {
-            systemClassPath.addAll(ClientLauncherEntryPoint.resolveClassPath(workDir, params.actions, params.profile).map(Path::toString).collect(Collectors.toList()));
         }
         if (useLegacyJavaClassPathProperty) {
             processArgs.add("-Djava.class.path=".concat(String.join(getPathSeparator(), systemClassPath)));
@@ -186,32 +150,6 @@ public class ClientLauncherProcess {
         isStarted = true;
     }
 
-    private void applyJava9Params(List<String> processArgs) {
-        jvmModulesPaths.add(javaVersion.jvmDir);
-        jvmModulesPaths.add(javaVersion.jvmDir.resolve("jre"));
-        Path openjfxPath = JavaHelper.tryGetOpenJFXPath(javaVersion.jvmDir);
-        if (openjfxPath != null) {
-            jvmModulesPaths.add(openjfxPath);
-        }
-        StringBuilder modulesPath = new StringBuilder();
-        StringBuilder modulesAdd = new StringBuilder();
-        for (String moduleName : jvmModules) {
-            boolean success = JavaHelper.tryAddModule(jvmModulesPaths, moduleName, modulesPath);
-            if (success) {
-                if (modulesAdd.length() > 0) modulesAdd.append(",");
-                modulesAdd.append(moduleName);
-            }
-        }
-        if (modulesAdd.length() > 0) {
-            processArgs.add("--add-modules");
-            processArgs.add(modulesAdd.toString());
-        }
-        if (modulesPath.length() > 0) {
-            processArgs.add("--module-path");
-            processArgs.add(modulesPath.toString());
-        }
-    }
-
     public void runWriteParams(SocketAddress address) throws IOException {
         try (ServerSocket serverSocket = new ServerSocket()) {
             serverSocket.bind(address);
@@ -221,7 +159,7 @@ public class ClientLauncherProcess {
             }
             Socket socket = serverSocket.accept();
             try (HOutput output = new HOutput(socket.getOutputStream())) {
-                byte[] serializedMainParams = IOHelper.encode(Launcher.gsonManager.gson.toJson(params));
+                byte[] serializedMainParams = Launcher.gsonManager.gson.toJson(params).getBytes(IOHelper.UNICODE_CHARSET);
                 output.writeByteArray(serializedMainParams, 0);
                 params.clientHDir.write(output);
                 params.assetHDir.write(output);
@@ -272,14 +210,6 @@ public class ClientLauncherProcess {
         //========
 
         public UUID session;
-
-        public AuthRequestEvent.OAuthRequestEvent oauth;
-
-        public String authId;
-
-        public long oauthExpiredTime;
-
-        public Map<String, String> extendedTokens;
 
         public transient HashedDir assetHDir;
 
